feat: Ajuste front para messages e fetch ao banco

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
         <button class="keyboard-digits" data-digit="9">9</button>
         <button class="keyboard-digits" data-digit="0">0</button>
       </section>
+      <section id="messages" class="messages"></section>
       <section class="actions">
         <button class="actions-button actions-button-branco" id="btn-branco">
           Branco
